# doc/api.yml
@@ -27,6 +27,17 @@ paths:
       operationId: getCustomers
       tags:
         - Customers
+      parameters:
+        - in: query
+          name: page
+          schema:
+            $ref: '#/components/schemas/Page'
+          required: true
+        - in: query
+          name: pageSize
+          schema:
+            $ref: '#/components/schemas/PageSize'
+          required: true
       responses:
         200:
           description: List of customers
@@ -36,7 +47,6 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Customer'
-    #TODO: add customers CRUD endpoint as set in controller
     put:
       operationId: updateCustomer
       tags:
@@ -140,3 +150,9 @@ components:
           type: string
         customer:
           $ref: '#/components/schemas/Voucher'
+    Page:
+      type: integer
+      description: Start at `1`
+    PageSize:
+      type: integer
+      description: Cannot exceed `500`
